--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=81b9f57852c097e5f2964de191c19731
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
+#DATABASE_URL="mysql://u150838941_shakoor:Ascvj789475@127.0.0.1:3306/u150838941_One_world_site?&charset=utf8"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
@@ -37,7 +37,8 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=smtp://smtp.gmail.com:587?encryption=tls&auth_mode=login&username=shakoor.fida1@gmail.com&password=Lacoste94
+#MAILER_DSN=shakoor.fida@one-world-blog.fr:Ascvj789475_@smtp.hostinger.com:465
 ###< symfony/mailer ###
 
 ###> google/recaptcha ###
